css/main.css
body {
  background: #eee;
}
.seasonHeader a {
  color: #fff;
  text-decoration: none;
}
table a {
  color: #000;
}
table a:hover {
  color: #fff;
}
a:hover {
  text-decoration: underline;
}
#background {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 300px;
  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 29%, rgba(0,0,0,0.57) 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(29%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.57))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 29%,rgba(0,0,0,0.57) 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(0,0,0,0) 29%,rgba(0,0,0,0.57) 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(0,0,0,0) 29%,rgba(0,0,0,0.57) 100%); /* IE10+ */
  background: linear-gradient(top,  rgba(0,0,0,0) 29%,rgba(0,0,0,0.57) 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#91000000',GradientType=0 ); /* IE6-9 */
}
#overlay {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
  display: none;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.8);
}
#page {
  padding: 10px 25px;
}
#logo {
  height: 28px;
}
#content {
  margin: auto;
}


/*element slector*/
#elementSelector option {
  padding: 3px 6px;
}

ul.no label {
  display: inline-block;
  min-width: 85px;
  font-size: 14px;
  font-weight: normal;
}
input.fullWidthButton {
  width: 100%;
}
.qtip-content ul,
#header ul,
#element ul,
ul.no {
  padding: 0;
  margin: 0;
  list-style: none;
}

.qtip-content ul,
#header ul li,
#element ul li,
ul.no {
  list-style-type: none;
}

#element h1 {
  cursor: pointer;
  display: inline;
}

.mainNameInlineEdit input {
  padding: 0 0 0 1px;
  margin: 0 20px 0 0;
  font-size: 32px;
  font-weight: bold;
  background-color: #eee;
  border: none;
  outline: none;
}
#alternativeNamesContainer {
  float: left;
}

#alternativeNames td {
  position: relative;
  z-index: 0;
}

#alternativeNames td div {
  padding: 4px 10px;
  color: #fff;
  background: #525252;
  border: #525252 0 solid;
}


#alternativeNames td:first-child div {
  min-width: 100px;
  -webkit-border-bottom-left-radius: 10px;
     -webkit-border-top-left-radius: 10px;
      -moz-border-radius-bottomleft: 10px;
         -moz-border-radius-topleft: 10px;
          border-bottom-left-radius: 10px;
             border-top-left-radius: 10px;
}


#alternativeNames td:last-child div {
  margin-left: -10px;
  -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
          border-radius: 10px;
}

#alternativeNames li.name span,
#alternativeNames li.name img {
  cursor: pointer;
  float: left;
}

#alternativeNames li.name img {
  margin-top: 3px;
}
#alternativeNames li.name span {
  padding-left: 2px;
}

.alternativeNamesInlineEdit{
    margin: 0;
}

#toolbox {
  float: right;
  width: 300px;
  padding: 5px;
  margin: 20px 0;
  background: rgba(255,255,255,0.5);
  border: 3px solid #525252;
  -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
          border-radius: 10px;
}

#toolbox label {
  min-width: 120px;
}
#toolbox li {
  margin-bottom: 4px;
}

.draft_background {
  position: absolute;
  color: #CCC;
  font-size: 150px;
  z-index: -1;
  top: 350px;
}

#draft_left {
  left: -180px;
  -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
      -ms-transform: rotate(90deg);
       -o-transform: rotate(90deg);
          transform: rotate(90deg);
}

#draft_right {
  right: -150px;
  -webkit-transform: rotate(-90deg);
     -moz-transform: rotate(-90deg);
      -ms-transform: rotate(-90deg);
       -o-transform: rotate(-90deg);
          transform: rotate(-90deg);
}

.newSeason,
.seasonHeader,
.seasonHeaderInfo,
.seasonHeaderFake {
  background: #525252;
  color: #fff;
  border: solid 0 black;
  padding: 5px 10px;
  margin: 3px -10px;
  cursor: pointer;
  height: 18px;
  line-height: 21px;
  -webkit-border-radius: 10px; 
     -moz-border-radius: 10px; 
          border-radius: 10px;
}
.newSeason form{
    height: 0;
    overflow: hidden;
    -moz-transition-property: height;
    -moz-transition-duration: 0.5s;
    -o-transition-property: height;
    -o-transition-duration: 0.5s;
    -webkit-transition-property: height;
    -webkit-transition-duration: 0.5s;
    transition-property: height;
    transition-duration: 0.5s;
    margin-bottom: 0;
}
.newSeason:hover form,
.newSeason.inEdit form{
    height: 98px;
}

.seasonHeader.edit{
    background: #aaa;
    color: black;
}
.newSeason{
    cursor: default;
    margin-left: 0;
    margin-right: 0;
    width: 122px;
    height: auto;
  -webkit-border-radius: 0; 
     -moz-border-radius: 0; 
          border-radius: 0;
    -webkit-border-bottom-right-radius: 10px;
    -webkit-border-bottom-left-radius: 10px;
    -moz-border-radius-bottomright: 10px;
    -moz-border-radius-bottomleft: 10px;
    border-bottom-right-radius: 10px;
    border-bottom-left-radius: 10px;
}

.seasonHeaderFake{
    cursor: default;
    margin-left: -10px;
    margin-right: -10px;
    width: 142px;
}

.seasonHeaderInfo,
.seasonHeaderFake{
    background-color: #333;
    cursor: default;
    text-align: center;
}

.seasonHeaderInfo img{
    margin-right: 2px;
    border-bottom: 2px solid;
}

.seasonHeaderInfo img.sxxexx{
    border-color: #faa732;
}
.seasonHeaderInfo img.absolute{
    border-color: #ff0000;
}
.seasonHeaderInfo img.full{
    border-color: #00ff00;
}
span.sxxexx{
    color: #faa732;
}
span.absolute{
    color: #ff0000;
}
span.full{
    color: #00ff00;
}


.newSeason label{
    min-width: 64px;
    float: left;
    padding-left: 2px;
}

div.seasonEdit{
    display: none;	
}
span.seasonEdit{
    float: right;	
}
/* ... */

